[package]
name = "ita_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
chrono = "0.4"
#iced_aw = "0.7"             # extra widgets (optional)
tokio = { version = "1", features = ["full"] }
winit = "0.30"

# For Oracle access (Oracle DB client)
# oracle = { version = "0.5", features = ["chrono"] }
serde = {version = "1.0.228", features = ["derive"] }
r2d2 = "0.8.10"
r2d2-oracle = { version = "0.7.0", features = ["chrono"] }
toml = "0.9.8"
thiserror = "2.0.17"
anyhow = "1.0.100"
